--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -1,15 +1,24 @@
+<!-- index.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PeepTalk</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-    <h1 class="font-bold text-4xl text-center">Welcome to PeepTalk</h1>
+  </head>
+  <body>
+    <!-- Check if this shows up -->
+    {% block login_form %}
+    <!-- Default content for login_form block -->
+    {% endblock %}
+
+
+    <!-- Check if this shows up -->
+    {% block signup_form %}
+    <!-- Default content for signup_form block -->
+    {% endblock %}
     <script src="{% static 'script.js' %}"></script>
-    
-</body>
+  </body>
 </html>
