Custom login and signup form done along with backend integration

--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -19,6 +19,8 @@
     {% block signup_form %}
     <!-- Default content for signup_form block -->
     {% endblock %}
+
+    {% block tweet %}{% endblock %}
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
