logging the user with username or email done

--- a/tweetApp/templates/login.html
+++ b/tweetApp/templates/login.html
@@ -72,8 +72,8 @@
           <input
             type="text"
             id="email"
-            name="username"
-            placeholder="Username"
+            name="username_or_email"
+            placeholder="Username or Email"
             class="w-full h-12 px-4 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-colors"
           />
         </div>
