completed the navbar

--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -9,18 +9,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <!-- Check if this shows up -->
-    {% block login_form %}
-    <!-- Default content for login_form block -->
-    {% endblock %}
 
+    {% block login_form %}{% endblock %}
 
-    <!-- Check if this shows up -->
-    {% block signup_form %}
-    <!-- Default content for signup_form block -->
-    {% endblock %}
+    {% block signup_form %}{% endblock %}
+
+    {% block navbar %}{% endblock %}
 
     {% block tweet %}{% endblock %}
+
+
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
