created a simple profile page for a tweet app

--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -18,6 +18,8 @@
 
     {% block tweet %}{% endblock %}
 
+    {% block profile %}{% endblock %}
+
 
     <script src="{% static 'script.js' %}"></script>
   </body>
