--- a/tweetApp/templates/tweet.html
+++ b/tweetApp/templates/tweet.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block tweet %}
-    <p class="">This is tweet route</p>
+    <p class="mt-4">This is tweet route</p>
 {% endblock %}
