--- a/tweetApp/templates/navbar.html
+++ b/tweetApp/templates/navbar.html
@@ -143,7 +143,7 @@
               </svg>
             </a>
             <a
-              href="#"
+              href="/tweet/profile/"
               class="flex items-center text-gray-600 hover:text-blue-500"
             >
               <svg
