--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PeepTalk</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{% static 'script.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
   </head>
   <body>
 
@@ -20,6 +22,7 @@
 
     {% block profile %}{% endblock %}
 
+    {% block editProfile %}{% endblock %}
 
     <script src="{% static 'script.js' %}"></script>
   </body>
