changed the app to SkillSync and created the page showcasing the posts for skills.

--- a/tweetApp/templates/navbar.html
+++ b/tweetApp/templates/navbar.html
@@ -23,7 +23,7 @@
           </svg>
           <div class="hidden md:flex items-center ml-10 space-x-8">
             <a
-              href="/tweet/"
+              href="/skill/"
               class="flex items-center text-gray-900 hover:text-blue-500 font-medium"
             >
               <svg
@@ -103,7 +103,7 @@
         <div class="flex items-center space-x-6">
           <div class="hidden md:flex items-center space-x-6">
             {% if user %}
-            <a href="/tweet/profile/">
+            <a href="/skill/profile/">
               <img
                 src="{{ user.profile_photo.url }}"
                 alt="Profile image"
@@ -112,7 +112,7 @@
             </a>
             {% else %}
             <a
-              href="/tweet/profile/"
+              href="/skill/profile/"
               class="flex items-center text-gray-600 hover:text-blue-500"
             >
               <svg
