--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -5,12 +5,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PeepTalk</title>
+    <title>SkillSync</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'script.js' %}" defer></script>
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
   </head>
-  <body>
+  <body class="bg-gray-200">
 
     {% block login_form %}{% endblock %}
 
