skill post creation done

--- a/tweetApp/templates/index.html
+++ b/tweetApp/templates/index.html
@@ -24,6 +24,8 @@
 
     {% block editProfile %}{% endblock %}
 
+    {% block skillPost %}{% endblock %}
+
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
