fixed small bug

--- a/tweetApp/templates/profile.html
+++ b/tweetApp/templates/profile.html
@@ -33,6 +33,7 @@
   </div>
 
   <div class="mt-8">
+    {% if skill %}
     <h3 class="text-xl font-bold mb-4">Skill Posts</h3>
     {% for skill in skill %}
     <div class="bg-white p-4 rounded-lg shadow my-4">
@@ -98,6 +99,20 @@
     </div>
     
     {% endfor %}
+    
+    {% else %}
+    <h3 class="text-xl font-bold mb-4">No Skill Posts</h3>
+    <div class="flex items-center justify-between">
+      <p>Click the side button to create a new Skill post</p>
+      <a href="/skill/post/">
+        <button class="bg-blue-500 text-white rounded-full p-2 my-2 flex items-center justify-between hover:bg-blue-700 duration-300">Create 
+          <svg class="ml-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/>
+          </svg>
+        </button>
+      </a>
+    </div>
+    {% endif %}
+
   </div>
 </main>
 
