--- a/tweetApp/templates/login.html
+++ b/tweetApp/templates/login.html
@@ -54,7 +54,7 @@
           </svg>
         </div>
         <h2 class="text-2xl font-bold text-gray-900 mb-2">
-          Sign in to PeepTalk
+          Sign in to SkillSync
         </h2>
         <p class="text-gray-500">Enter your account details</p>
       </div>
