--- a/tweetApp/templates/login.html
+++ b/tweetApp/templates/login.html
@@ -131,7 +131,7 @@
         <!-- Signup Redirect -->
         <div class="text-sm text-center text-gray-600">
           Don't have an account?
-          <a href="/signup" class="text-blue-500 hover:underline">Sign up</a>
+          <a href="/signup/" class="text-blue-500 hover:underline">Sign up</a>
         </div>
       </form>
     </div>
