Added likes to skill post

--- a/tweetApp/templates/editProfile.html
+++ b/tweetApp/templates/editProfile.html
@@ -6,7 +6,7 @@
         {% include "navbar.html" %}
     {% endblock %}
 
-    <main class="container mx-auto mt-8 px-4">  
+    <main class="container mx-auto mt-8 px-4 w-3/4">  
         {% if message %}
             <p class="text-green-500" id="message">{{message}}</p>
         {% endif %}
