--- a/tweetApp/templates/profile.html
+++ b/tweetApp/templates/profile.html
@@ -50,7 +50,7 @@
         class="mt-2 rounded-lg w-full h-auto object-cover"
       />
       <div class="mt-4 flex space-x-4 text-gray-500">
-        <button class="flex items-center space-x-1 hover:text-blue-500">
+        {% comment %} <button class="flex items-center space-x-1 hover:text-blue-500">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-5 w-5"
@@ -64,37 +64,26 @@
             />
           </svg>
           <span>Reply</span>
-        </button>
-        <button class="flex items-center space-x-1 hover:text-green-500">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <span>Retweet</span>
-        </button>
-        <button class="flex items-center space-x-1 hover:text-red-500">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <span>Like</span>
-        </button>
+        </button> {% endcomment %}
+        
+        <div class="flex items-center space-x-1 hover:text-blue-500">
+          <span>{{skill.post_likes}}</span>
+          <button class="flex items-center space-x-1 hover:text-red-500">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <span>Like</span>
+          </button>
+        </div>
       </div>
     </div>
     
